--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -19,7 +19,7 @@ p{
 li{
 	list-style:none;
 }
-a:hover{
+aside > a:hover{
 	text-decoration:none;
 	color:#333;
 }
@@ -29,7 +29,7 @@ a:hover{
 .btn{
 	margin-bottom:5px;
 }
-li{
+.links > li{
 	margin:10px;
 	margin-top:0px;
 	padding-left:15px;
@@ -38,6 +38,12 @@ li{
 	padding-top:5px;
 	padding-bottom:5px;
 }
-li:hover{
+.links > li:hover{
 	border-left:5px solid orange;
+}
+.forms{
+	margin:0 auto;
+}
+.modal-dialog{
+	width:300px;
 }
